--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -11,11 +11,14 @@ canvas {
     display: block;
 }
 body {
+    padding: 0;
     margin: 0;
 }
 #unity-container {
     width: 100%;
     height: 100%;
+    position: fixed;
+    /* Ð¢ÐµÐ½Ð¸ Ð¾Ñ‚ÐºÐ»ÑŽÑ‡ÐµÐ½Ñ‹ */
 }
 #unity-canvas {
     width: 100%;
@@ -44,9 +47,10 @@ body {
 }
 #unity-logo img {
     max-width: 80%;
+	max-height: 80%;
 }
 #unity-progress-bar-empty {
-    width: 80%;
+    width: 15%;
     height: 24px;
     margin: 10px 20px 20px 10px;
     text-align: left;
@@ -63,16 +67,6 @@ body {
 }
 .light #unity-progress-bar-full {
     background: black;
-}
-
-#unity-fullscreen-button {
-    position: absolute;
-    right: 10px;
-    bottom: 10px;
-    width: 38px;
-    height: 38px;
-    background: url('fullscreen-button.png') no-repeat center;
-    background-size: contain;
 }
 
 .spinner,
